Removed auto overflow from block Fixed Accordion prop types Moved dependencies on top

--- a/packages/ui/src/style/components/block/block.scss
+++ b/packages/ui/src/style/components/block/block.scss
@@ -1,5 +1,4 @@
 .#{$ui-prefix}__block {
-    overflow: auto;
 }
 
 .#{$ui-prefix}__block--outstanding {
